src/z80asm/z80asm2/t/20-preproc/expected/include_13.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/include_13.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/include_13.asm...
t/20-preproc/input/include_13.asm:1:31: error: Unexpected token after INCLUDE: extra
    #include "file_not_found.inc" extra
                                  ^
